--- a/lab-dw-data-structuring-and-combining.ipynb
+++ b/lab-dw-data-structuring-and-combining.ipynb
@@ -36,14 +36,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "492d06e3-92c7-4105-ac72-536db98d3244",
    "metadata": {
     "id": "492d06e3-92c7-4105-ac72-536db98d3244"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "from my_func import complete_cleaning\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "df_1 = pd.read_csv(\"https://raw.githubusercontent.com/data-bootcamp-v4/data/main/file1.csv\")\n",
+    "df_2 = pd.read_csv(\"https://raw.githubusercontent.com/data-bootcamp-v4/data/main/file2.csv\")\n",
+    "df_3 = pd.read_csv(\"https://raw.githubusercontent.com/data-bootcamp-v4/data/main/file3.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "708357dd-8553-41f7-9527-e93f8ecd7b61",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code goes here"
+    "df_3 = df_3.rename(columns = {\"State\":\"ST\" , \"Gender\":\"GENDER\"},errors=\"raise\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "bddd14d3-e9e0-4e00-bb5a-49b1b30df4a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df_1,df_2,df_3],)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "ca9a2aba-7363-4842-9855-f98c56ab8655",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tiago/Documents/GitHub/Labs/lab-dw-data-structuring-and-combining/my_func.py:29: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df.customer_lifetime_value = df.customer_lifetime_value.fillna(0)\n",
+      "/home/tiago/Documents/GitHub/Labs/lab-dw-data-structuring-and-combining/my_func.py:30: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df.gender = df.gender.fillna(df.gender.describe().top)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = complete_cleaning(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "45b96ce4-6ba6-40fe-86d5-724a89ebe3d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "customer                     False\n",
+       "state                        False\n",
+       "gender                       False\n",
+       "education                    False\n",
+       "customer_lifetime_value      False\n",
+       "income                       False\n",
+       "monthly_premium_auto         False\n",
+       "number_of_open_complaints    False\n",
+       "policy_type                  False\n",
+       "vehicle_class                False\n",
+       "total_claim_amount           False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().any()"
    ]
   },
   {
@@ -71,18 +170,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa10d9b0-1c27-4d3f-a8e4-db6ab73bfd26",
-   "metadata": {
-    "id": "aa10d9b0-1c27-4d3f-a8e4-db6ab73bfd26"
-   },
-   "outputs": [],
-   "source": [
-    "# Your code goes here"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "df35fd0d-513e-4e77-867e-429da10a9cc7",
    "metadata": {
@@ -94,6 +181,92 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "923cd393-3651-4a88-a2d1-315db8608ad1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_claim_amount</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sales_channel</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Agent</th>\n",
+       "      <td>1810226.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Branch</th>\n",
+       "      <td>1301204.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Call Center</th>\n",
+       "      <td>926600.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Web</th>\n",
+       "      <td>706600.04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               total_claim_amount\n",
+       "sales_channel                    \n",
+       "Agent                  1810226.82\n",
+       "Branch                 1301204.00\n",
+       "Call Center             926600.82\n",
+       "Web                     706600.04"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/data-bootcamp-v4/data/main/marketing_customer_analysis_clean.csv\")\n",
+    "df = df.drop(\"unnamed:_0\", axis=1)\n",
+    "pivot_df = df.pivot_table(index =\"sales_channel\", values= \"total_claim_amount\", aggfunc='sum')\n",
+    "pivot_df.total_claim_amount = pivot_df.total_claim_amount.apply(lambda x : round(x,2))\n",
+    "pivot_df"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "31d1b686-dc80-4897-9ae4-713f57353b45",
+   "metadata": {},
+   "source": [
+    "The 2 most profitable sales channels were By agent and by Branch, with Agent winning by more than 500000,\n",
+    "the web sales channel was the lesat profitable followed by the Call center, both very close in numer\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "640993b2-a291-436c-a34d-a551144f8196",
    "metadata": {
@@ -101,6 +274,128 @@
    },
    "source": [
     "2. Create a pivot table that shows the average customer lifetime value per gender and education level. Analyze the resulting table to draw insights."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "id": "13307648-cecb-480a-ac2a-3f63463e02f5",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>customer_lifetime_value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender</th>\n",
+       "      <th>education</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">F</th>\n",
+       "      <th>Bachelor</th>\n",
+       "      <td>13386258.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>College</th>\n",
+       "      <td>12460107.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Doctor</th>\n",
+       "      <td>1465701.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>High School or Below</th>\n",
+       "      <td>13793600.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Master</th>\n",
+       "      <td>3874600.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">M</th>\n",
+       "      <th>Bachelor</th>\n",
+       "      <td>12110061.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>College</th>\n",
+       "      <td>12851725.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Doctor</th>\n",
+       "      <td>1490482.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>High School or Below</th>\n",
+       "      <td>12680914.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Master</th>\n",
+       "      <td>3365559.06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             customer_lifetime_value\n",
+       "gender education                                    \n",
+       "F      Bachelor                          13386258.11\n",
+       "       College                           12460107.91\n",
+       "       Doctor                             1465701.78\n",
+       "       High School or Below              13793600.12\n",
+       "       Master                             3874600.25\n",
+       "M      Bachelor                          12110061.83\n",
+       "       College                           12851725.02\n",
+       "       Doctor                             1490482.06\n",
+       "       High School or Below              12680914.19\n",
+       "       Master                             3365559.06"
+      ]
+     },
+     "execution_count": 261,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_multiindex = df.set_index([\"gender\", \"education\"])\n",
+    "df_pivot2 =df_multiindex.pivot_table(index=[\"gender\", \"education\"], values=\"customer_lifetime_value\", aggfunc='sum')\n",
+    "df_pivot2.customer_lifetime_value = df_pivot2.customer_lifetime_value.apply(lambda x : round(x,2))\n",
+    "df_pivot2"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "a0667725-3c96-4283-8d7c-f70dd0ed1779",
+   "metadata": {},
+   "source": [
+    "The Female hight values have a Bachelor while the Males have a College education\n",
+    "Both male and female values are low with and education of Master or Doctor\n",
+    "The higher values for both genders are with education Bachelor, College and High School or below"
    ]
   },
   {
@@ -130,15 +425,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 315,
    "id": "3a069e0b-b400-470e-904d-d17582191be4",
    "metadata": {
     "id": "3a069e0b-b400-470e-904d-d17582191be4"
    },
    "outputs": [],
    "source": [
-    "# Your code goes here"
+    "complains = {\n",
+    "    \"date\": [\"15-05-2024\", \"15-05-2024\", \"13-05-2024\", \"13-05-2024\", \"14-05-2024\"],\n",
+    "    \"policyType\": [\"Car\",\"Car\",\"Health\",\"Theft\",\"Theft\"],\n",
+    "    'complaints': [1,1,1,1,1]}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "id": "d774e342-7e2d-4750-91fd-cfadb16df3f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_49163/2114089593.py:2: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "  df.date = pd.to_datetime(df.date, yearfirst=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(complains)\n",
+    "df.date = pd.to_datetime(df.date, yearfirst=True)\n",
+    "df[\"month\"] = df[\"date\"].dt.to_period('M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "id": "67b1fb2d-caa4-4c03-b1ac-709d0e194f31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>policyType</th>\n",
+       "      <th>complaints</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-05-15</td>\n",
+       "      <td>Car</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-05-15</td>\n",
+       "      <td>Car</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-05-13</td>\n",
+       "      <td>Health</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-05-13</td>\n",
+       "      <td>Theft</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-05-14</td>\n",
+       "      <td>Theft</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date policyType  complaints    month\n",
+       "0 2024-05-15        Car           1  2024-05\n",
+       "1 2024-05-15        Car           1  2024-05\n",
+       "2 2024-05-13     Health           1  2024-05\n",
+       "3 2024-05-13      Theft           1  2024-05\n",
+       "4 2024-05-14      Theft           1  2024-05"
+      ]
+     },
+     "execution_count": 319,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "id": "b9a7d705-ff63-4c69-aaad-0192575f8e88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.groupby([\"policyType\",\"month\"]).size().reset_index(name=\"complaints\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "id": "3965ff97-89a8-4fe6-99c9-9da4e60f11e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>policyType</th>\n",
+       "      <th>month</th>\n",
+       "      <th>complaints</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Car</td>\n",
+       "      <td>2024-05</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Health</td>\n",
+       "      <td>2024-05</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Theft</td>\n",
+       "      <td>2024-05</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  policyType    month  complaints\n",
+       "0        Car  2024-05           2\n",
+       "1     Health  2024-05           1\n",
+       "2      Theft  2024-05           2"
+      ]
+     },
+     "execution_count": 323,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaf640cc-43b2-4d63-b1e2-ad2a47d244d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -160,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
